pom file updated

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,059</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">20,835</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.cucumber.testNG.Runner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1647405981730</td><td rowspan="1">26427</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.cucumber.testNG.Runner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1658678757714</td><td rowspan="1">18776</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.cucumber.testNG.Runner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validate weather with UI and API&quot;</td><td>&quot;Optional[Compare temperature from accuweather UI with API]&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.cucumber.testNG.Runner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validate weather with UI and API&quot;</td><td>&quot;Optional[Compare temperature from accuweather UI with API]&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Temperatures are not equal
+	at org.testng.Assert.fail(Assert.java:99)
+	at com.cucumber.pages.ResultPage.CompareTemp(ResultPage.java:45)
+	at com.cucumber.StepDefinition.FeatureSteps.compare_temperature_from_api_with_ui(FeatureSteps.java:45)
+	at ✽.Compare temperature from API with UI(file:///C:/Users/booba/git/Cucumber_TestNG/src/test/java/Features/CompareResults.feature:8)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
