Cucumber reports added

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\booba\AppData\Local\Temp\testng-eclipse--1115170848\testng-customsuite.xml</span>
+                    <span>C:\Users\booba\AppData\Local\Temp\testng-eclipse--1516315716\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content failed suite-Default_suite">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.cucumber.testNG.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate weather with UI and API&quot;, &quot;Optional[Compare temperature from accuweather UI with API]&quot;)">runScenario("Validate weather with UI and API", "Optional[Compare temperature from accuweather UI with API]")</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.cucumber.testNG.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate weather with UI and API&quot;, &quot;Compare temperature from accuweather UI with API&quot;)">runScenario("Validate weather with UI and API", "Compare temperature from accuweather UI with API")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,35 +119,28 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.cucumber.testNG.Runner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Validate weather with UI and API&quot;, &quot;Optional[Compare temperature from accuweather UI with API]&quot;)">
-                  </a> <!-- runScenario("Validate weather with UI and API", "Optional[Compare temperature from accuweather UI with API]") -->
+                  <a name="runScenario(&quot;Validate weather with UI and API&quot;, &quot;Compare temperature from accuweather UI with API&quot;)">
+                  </a> <!-- runScenario("Validate weather with UI and API", "Compare temperature from accuweather UI with API") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Validate weather with UI and API", "Optional[Compare temperature from accuweather UI with API]")</span>
-                  <div class="stack-trace">java.lang.AssertionError: Temperatures are not equal
-	at org.testng.Assert.fail(Assert.java:99)
-	at com.cucumber.pages.ResultPage.CompareTemp(ResultPage.java:45)
-	at com.cucumber.StepDefinition.FeatureSteps.compare_temperature_from_api_with_ui(FeatureSteps.java:45)
-	at ✽.Compare temperature from API with UI(file:///C:/Users/booba/git/Cucumber_TestNG/src/test/java/Features/CompareResults.feature:8)
-
-</div> <!-- stack-trace -->
+                  <span class="parameters">("Validate weather with UI and API", "Compare temperature from accuweather UI with API")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\booba\AppData\Local\Temp\testng-eclipse--1115170848\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\booba\AppData\Local\Temp\testng-eclipse--1516315716\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.cucumber.testNG.Runner')
-data.setCell(0, 3, 18776);
+data.setCell(0, 3, 13520);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,18 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.cucumber.testNG.Runner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@3457cc8d)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">runScenario("Validate weather with UI and API", "Optional[Compare temperature from accuweather UI with API]")</span>
-                <span class="method-start">527 ms</span>
+                <span class="method-name">runScenario("Validate weather with UI and API", "Compare temperature from accuweather UI with API")</span>
+                <span class="method-start">508 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">19308 ms</span>
+                <span class="method-start">14032 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
